--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -1,15 +1,15 @@
-$topBarBackground: #FFE600;
-$clearBackground: #EEEEEE;
-$buttonColor: #3483FA;
-$topBarSearchInputColor: #333333;
+$searchBarBackgroundColor: #ffe600;
+$clearBackground: #eee;
+$buttonColor: #3483fa;
+$topBarSearchInputColor: #333;
 $widePadding: 32px;
 $narrowPadding: 16px;
 $fontSmall: 18px;
 $fontMedium: 24px;
+$searchBarHeight: 45px;
+$infoBackgroundColor: #fff;
 
-// Main App Wrapper Layout
-
-.MainAppWrpr {
+.main-app-wrpr {
   position: fixed;
   top: 0;
   left: 0;
@@ -17,77 +17,73 @@ $fontMedium: 24px;
   right: 0;
   overflow-y: scroll;
   background-color: $clearBackground;
+
+  .main-screen-wrpr {
+    background-color: $clearBackground;
+    height: 100%;
+    width: 100%;
+
+    .center-area-wrpr {
+      top: 0;
+      height: auto;
+      width: 60%;
+      margin: 0 auto;
+      padding-bottom: 5%;
+      background-color: $clearBackground;
+
+      .main-data-area-wrpr {
+        left: 0;
+        bottom: 0;
+        right: 0;
+        height: 96%;
+        width: 100%;
+      }
+    }
+  }
 }
 
-.MainScreenWrpr {
-  background-color: $clearBackground;
-  height: 100%;
-  width: 100%;
-}
-
-.CenterAreaWrpr {
-  top: 0;
-  height: auto;
-  width: 60%;
-  margin: 0 auto;
-  padding-bottom: 5%;
-  background-color: $clearBackground;
-}
-
-.MainDataAreaWrpr {
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  height: 96%;
-  width: 100%;
-}
-
-// Search View Component
-
-.SearchView {
+.search-view {
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   height: 100%;
   width: 100%;
-  background-color: white;
+  background-color: $infoBackgroundColor;
+
+  .search-view-separator {
+    width: 95%;
+    max-width: 95%;
+    border-top: 1px solid rgb(226, 226, 226);
+  }
 }
 
-.searchViewSeparator {
-  width: 95%;
-  max-width: 95%;
-  border-top: 1px solid rgb(226, 226, 226);
-}
-
-// Result Component
-
-.Result {
+.result {
   width: 100%;
   height: 212px;
-  background-color: white;
+  background-color: $infoBackgroundColor;
   cursor: pointer;
 }
 
-.resultWrpr {
+.result-wrpr {
   display: grid;
   grid-template-columns: 212px 40% 1fr;
   grid-template-rows: 212px;
-  gap: 0px 0px;
+  gap: 0 0;
   grid-template-areas:
-    "resultThumbnail resultInfo resultLocation";
+    "result-thumbnail result-info result-location";
 }
 
-.resultInfo { 
-  grid-area: resultInfo;
+.result-info { 
+  grid-area: result-info;
   overflow: hidden;
 }
 
-.resultThumbnail { 
-  grid-area: resultThumbnail;
+.result-thumbnail { 
+  grid-area: result-thumbnail;
   padding: $narrowPadding;
   overflow: hidden;
+
   img {
     object-fit: cover;
     height: 180px;
@@ -96,54 +92,54 @@ $fontMedium: 24px;
   }
 }
 
-.resultLocation { 
-  grid-area: resultLocation;
+.result-location { 
+  grid-area: result-location;
   padding-right: $widePadding;
   padding-top: $widePadding;
   text-align: right;
 }
 
-.resultInfoTitle {
+.result-info-title {
   margin-top: $widePadding;
   font: $fontSmall Arial;
 }
 
-.resultInfoPrice {
+.result-info-price {
   margin-top: $widePadding;
   font: $fontMedium Arial;
 }
 
-.resultLocationText {
+.result-location-text {
   margin-top: $narrowPadding;
   font: 12px Arial;
 }
 
-.resultInfoTruckIcon {
-  color: green;
+.result-info-truck-icon {
+  color: #008000;
   font: 10px Arial;
   padding: 4px;
 }
 
 // ItemView component
 
-.itemViewTitle {
+.item-view-title {
   padding-top: $narrowPadding;
   font: $fontMedium Arial;
 }
 
-.itemViewPrice {
+.item-view-price {
   margin-top: $widePadding;
   margin-bottom: $widePadding;
   font: 46px Arial;
 }
 
-.itemViewBuyBtn {
+.item-view-buy-btn {
   background-color: $buttonColor;
   font: $narrowPadding Arial;
   width: 100%;
   height: 40px;
   color: $clearBackground;
-  border: none;
+  border: 0;
   border-radius: 3px;
 }
 
@@ -160,23 +156,23 @@ a {
   text-decoration: none;
 }
 
-// TopBar
+// SearchBar
 
-.SearchBar {
+.search-bar {
   top: 0;
   left: 0;
   right: 0;
   overflow: hidden;
-  height: 45px;
-  max-height: 45px;
-  min-height: 45px;
-  background-color: $topBarBackground;
+  height: $searchBarHeight;
+  max-height: $searchBarHeight;
+  min-height: $searchBarHeight;
+  background-color: $searchBarBackgroundColor;
 }
 
-.searchBarWrppr {
-  height: 45px;
-  max-height: 45px;
-  min-height: 45px;
+.search-bar-wrppr {
+  height: $searchBarHeight;
+  max-height: $searchBarHeight;
+  min-height: $searchBarHeight;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -185,8 +181,8 @@ a {
   align-content: center;
 }
 
-.searchBarLogo {
-  background-image: url(../logo.png);  
+.search-bar-logo {
+  background-image: url('../logo.png');  
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;   
@@ -197,28 +193,28 @@ a {
   height: 37px;
 }
 
-.searchBarInput {
+.search-bar-input {
   display: block;
   flex-basis: 55%;
   order: 2;
   padding-left: 10px;
 }
 
-.searchBarSearchInput {
+.search-bar-search-input {
   color: $topBarSearchInputColor;
   font: $fontSmall Arial;
   width: calc(100%);
   outline: none;
-  border-width: 0px;
-  border: none;
+  border-width: 0;
+  border: 0;
   height: 24px;
   text-indent: 10px;
-  background-color: white;
+  background-color: $infoBackgroundColor;
 }
 
-.searchBarSearchBtn {
+.search-bar-search-btn {
   outline: none;
-  border-width: 0px;
+  border-width: 0;
   padding-top: 5px;
   height: 26px;
   width: 26px;
@@ -231,7 +227,7 @@ a {
 
 // Breadcrumb
 
-.Breadcrumb {
+.breadcrumb {
   max-height: 15px;
   min-height: 15px;
   height: 15px;
@@ -249,16 +245,16 @@ a {
   overflow: hidden;
 }
 
-.breadcrumbElement {
-  float:left;
+.breadcrumb-element {
+  float: left;
   height: 100%;
   vertical-align: middle;
   overflow: hidden;
 }
 
-.breadcrumbElementArrow {
+.breadcrumb-element-arrow {
   height: 100%;
-  float:left;
+  float: left;
   padding-left: 8px;
   padding-right: 8px;
   vertical-align: middle;
@@ -268,16 +264,16 @@ a {
 
 // ItemView
 
-.ItemView {
-  background-color: white;
+.item-view {
+  background-color: $infoBackgroundColor;
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  flex-direction:row;
+  flex-direction: row;
   justify-content: space-between;
 }
 
-.itemViewPicture { 
+.item-view-picture { 
   padding: $widePadding;
   margin-left: 0;
   display: flex;
@@ -285,22 +281,23 @@ a {
   flex-shrink: 1;
   flex-basis: 680px;
   height: auto;
+
   img {
     width: 100%;
     height: auto;
   }
  }
 
-.itemViewDetails { 
+.item-view-details { 
   padding: $widePadding;
   order: 2;
   flex-basis: 250px;
   flex-shrink: 1;
-  margin-right: 0px;
+  margin-right: 0;
   font: 14px Arial;
 }
 
-.itemViewDesc { 
+.item-view-desc { 
   order: 3;
   margin-right: auto;
   padding-left: $widePadding;
@@ -310,7 +307,7 @@ a {
   min-width: 20px;
 }
 
-.itemViewDescContentWrppr {
+.item-view-desc-content-wrppr {
   min-width: 20px;
   padding-top: $widePadding;
   padding-bottom: $widePadding;
